force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Configure_Classic__c.field-meta.xml
<CustomField>
    <fullName>Configure_Classic__c</fullName>
    <formula>IF ( LEN( Apttus_QPConfig__PriceListId__c ) &gt; 0 , HYPERLINK(&quot;/apex/Apttus_QPConfig__ProposalConfiguration?id=&quot; &amp;Id&amp;&quot;&amp;useAdvancedApproval=true&amp;useDealOptimizer=true&quot;, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configure Classic</label>
    <type>Text</type>
</CustomField>