force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Exempted_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Exempted_Product_Type__c</fullName>
    <description>This backend field is used to mark the proposal based on the product type from the products for which the proposal will be generated without pricing</description>
    <label>Exempted Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Priority Product</fullName>
            </value>
            <value>
                <fullName>StarTrack</fullName>
            </value>
            <value>
                <fullName>Workforce Verification</fullName>
            </value>
            <value>
                <fullName>Track Mail</fullName>
            </value>
            <value>
                <fullName>Parcel Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>