force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Expected_Revenue_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue_End_Date__c</fullName>
    <defaultValue>DATE( (YEAR(Today()) +  1) , MONTH(Today()) , DAY(Today()) )  + 30 + 30 -1</defaultValue>
    <inlineHelpText>Please provide estimated revenue end date, this value will be populated across Opportunity Products</inlineHelpText>
    <label>Expected Revenue End Date</label>
    <type>Date</type>
</CustomField>