force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Expected_Revenue_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue_Start_Date__c</fullName>
    <defaultValue>Today()+ 30 + 30</defaultValue>
    <inlineHelpText>Please provide estimated revenue start date, this value will be populated across Opportunity Products</inlineHelpText>
    <label>Expected Revenue Start Date</label>
    <type>Date</type>
</CustomField>