force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Is_Exempted_Prod__c.field-meta.xml
<CustomField>
    <fullName>Is_Exempted_Prod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the backend field used for identifying the products for which we need to create proposal document without pricing</description>
    <inlineHelpText>This is the backend field used for identifying the products for which we need to create proposal document without pricing</inlineHelpText>
    <label>Is Exempted Prod</label>
    <type>Checkbox</type>
</CustomField>