force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Is_Startrack_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Is_Startrack_Proposal__c</fullName>
    <description>Users to determine whether this is a Startrack proposal or not</description>
    <label>Is this proposal for StarTrack Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>