force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Is_T_C_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_T_C_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>this field is to either show/hide the terms and condition button on the proposal record</description>
    <inlineHelpText>this field is to either show/hide the terms and condition button on the proposal record</inlineHelpText>
    <label>Is T&amp;C Enabled</label>
    <type>Checkbox</type>
</CustomField>