force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/System_Context_Bypass_Validation__c.field-meta.xml
<CustomField>
    <fullName>System_Context_Bypass_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Context Bypass Validation</label>
    <type>Checkbox</type>
</CustomField>