force-app/main/default/objects/Apttus_Proposal__Proposal__c/recordTypes/APT_Amendment_Quote.recordType-meta.xml
<RecordType>
    <fullName>APT_Amendment_Quote</fullName>
    <active>true</active>
	<description>Captures the information for amendment quotes.</description>
    <label>Amendment Quote</label>
</RecordType>