force-app/main/default/objects/Apttus_Proposal__Proposal__c/recordTypes/APT_Renewal_Quote.recordType-meta.xml
<RecordType>
    <fullName>APT_Renewal_Quote</fullName>
    <active>true</active>
	<description>Captures the information for renewal quotes.</description>
    <label>Renewal Quote</label>
</RecordType>