force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/APT_Conversation.validationRule-meta.xml
<ValidationRule>
    <fullName>APT_Conversation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Is_Startrack_Proposal__c) = &apos;Yes&apos; ,
NOT(ISBLANK(TEXT(APT_Tier_Adjustment_Type__c ))),
ISBLANK( APT_Conversation__c)
)</errorConditionFormula>
    <errorDisplayField>APT_Conversation__c</errorDisplayField>
    <errorMessage>Conversation with customer is required when Tier Adjustment is applied</errorMessage>
</ValidationRule>