force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/APT_Customer_Background.validationRule-meta.xml
<ValidationRule>
    <fullName>APT_Customer_Background</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Is_Startrack_Proposal__c) = &apos;Yes&apos; ,
NOT(ISBLANK(TEXT(APT_Tier_Adjustment_Type__c ))),
ISBLANK( APT_Customer_Background__c )
)</errorConditionFormula>
    <errorDisplayField>APT_Customer_Background__c</errorDisplayField>
    <errorMessage>Please enter Customer Background</errorMessage>
</ValidationRule>