force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/APT_Customer_Intermediary.validationRule-meta.xml
<ValidationRule>
    <fullName>APT_Customer_Intermediary</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Is_Startrack_Proposal__c) = &apos;Yes&apos; ,
NOT(ISBLANK(TEXT(APT_Intermediary__c))), TEXT(APT_Intermediary__c) = &apos;Yes&apos; ,
ISBLANK( APT_Name_of_Intermediary_s_Client__c )
)</errorConditionFormula>
    <errorDisplayField>APT_Name_of_Intermediary_s_Client__c</errorDisplayField>
    <errorMessage>Name of Intermediary&apos;s Client is needed</errorMessage>
</ValidationRule>