force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/APT_Required_Justification.validationRule-meta.xml
<ValidationRule>
    <fullName>APT_Required_Justification</fullName>
    <active>true</active>
    <description>Tier Adjustment Justification is required when Tier Adjustment is applied</description>
    <errorConditionFormula>AND(TEXT(Is_Startrack_Proposal__c) = &apos;Yes&apos; ,
NOT(ISBLANK(TEXT(APT_Tier_Adjustment_Type__c ))),
ISBLANK( APT_Tier_Adjustment_Justification__c ) 
)</errorConditionFormula>
    <errorDisplayField>APT_Tier_Adjustment_Justification__c</errorDisplayField>
    <errorMessage>Please enter adjustment justification</errorMessage>
</ValidationRule>