force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/APT_RestrictOwnerChange.validationRule-meta.xml
<ValidationRule>
    <fullName>APT_RestrictOwnerChange</fullName>
    <active>true</active>
    <description>This Validation rule will restrict the other users to modify proposal owner other than System Admin and DES Profile</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp;
ISCHANGED(OwnerId) &amp;&amp;
$Profile.Name != &apos;System Administrator&apos; &amp;&amp;
$Profile.Name != &apos;Enterprise Onboarding&apos;</errorConditionFormula>
    <errorMessage>You are not authorized to change proposal owner, please contact Express Customer Onboarding team for support via Deal Support Request</errorMessage>
</ValidationRule>