force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/APT_Tier_Adjustment_Threshold_Gov.validationRule-meta.xml
<ValidationRule>
    <fullName>APT_Tier_Adjustment_Threshold_Gov</fullName>
    <active>true</active>
    <description>Validation to restrict the updation of Tier Adjustment Type for Government accounts</description>
    <errorConditionFormula>AND( 
CONTAINS(TEXT(Apttus_Proposal__Opportunity__r.Account.Sales_Segment__c), &apos;Government&apos;),
APT_STE_Pricing_Tier__c = &apos;Tier 6&apos;, 
OR(ISPICKVAL(APT_Tier_Adjustment_Type__c , &apos;1 Tier Up&apos;),ISPICKVAL(APT_Tier_Adjustment_Type__c , &apos;2 Tier Up&apos;) ) 

)</errorConditionFormula>
    <errorDisplayField>APT_Tier_Adjustment_Type__c</errorDisplayField>
    <errorMessage>For tier adjustment, please contact pricing support team via Deal Support Request (DSR)</errorMessage>
</ValidationRule>