force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/Billing_account_type_cant_be_sub_account.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_account_type_cant_be_sub_account</fullName>
    <active>true</active>
    <description>Billing account type can not be sub account for new customers</description>
    <errorConditionFormula>AND(
   ISPICKVAL(Apttus_Proposal__Opportunity__r.Type, &apos;New Customer&apos;)
,  ISPICKVAL(APT_Method_of_Payment__c, &apos;Sub Account&apos;)
)</errorConditionFormula>
    <errorMessage>Billing Account Type can not be Sub Account for New Customers</errorMessage>
</ValidationRule>