force-app/main/default/objects/Apttus_Proposal__Proposal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Proposal__Opportunity__c</columns>
    <columns>Apttus_Proposal__Approval_Stage__c</columns>
    <columns>Apttus_Proposal__Valid_Until_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>APT_Credit_Assessment__c</columns>
    <columns>APT_Credit_Assessment_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>Waiting for Approval</label>
    <language>en_US</language>
</ListView>