force-app/main/default/objects/Apttus_Proposal__Proposal__c/listViews/APT_DGT_Team_Proposal.listView-meta.xml
<ListView>
    <fullName>APT_DGT_Team_Proposal</fullName>
    <filterScope>Queue</filterScope>
    <label>DGT Team</label>
    <queue>APT_DGT_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>