force-app/main/default/objects/Apttus_Proposal__Proposal__c/listViews/APT_Overweight_items_Proposal.listView-meta.xml
<ListView>
    <fullName>APT_Overweight_items_Proposal</fullName>
    <filterScope>Queue</filterScope>
    <label>Overweight items</label>
    <queue>APT_Overweight_items</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>