force-app/main/default/objects/Apttus_Proposal__Proposal__c/listViews/My_Accepted_Proposals.listView-meta.xml
<ListView>
    <fullName>My_Accepted_Proposals</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Proposal__Primary__c</columns>
    <columns>Apttus_QPApprov__Approval_Status__c</columns>
    <columns>Apttus_Proposal__Approval_Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Apttus_Proposal__Proposal_Expiration_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Apttus_Proposal__Primary__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Apttus_Proposal__Approval_Stage__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>My Accepted Proposals</label>
    <language>en_US</language>
</ListView>